conveniences to avoid lambdas